feat: フッターレイアウトを編集

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -8,6 +8,10 @@ button {
   border: transparent;
 }
 
+.content-width {
+  width: 90%;
+}
+
 .center {
   margin: 0 auto;
 }
@@ -85,7 +89,6 @@ a:hover::before {
 }
 
 .header-container {
-  width: 90%;
   justify-content: space-between;
   align-items: center;
 }
@@ -123,4 +126,21 @@ a:hover::before {
 
 .header-user-login {
   margin-left: 80px;
+}
+
+
+/* footerレイアウト */
+.footer {
+  background-color: rgb(220, 255, 239);
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer-container {
+  text-align: center;
+}
+
+.footer-text {
+  color: #000;
 }
