--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,4 +1,4 @@
-/* 共通レイアウト */
+/* 共通レイアウトパーツ */
 * {
   font-family: "ヒラギノ丸ゴ ProN","Hiragino Maru Gothic ProN";
   background-color: #fff;
@@ -29,6 +29,16 @@ a {
 
 .textDecorationDisable {
   text-decoration: none;
+}
+
+.required::before {
+  content: '必須';
+  background-color: red;
+  color: #fff;
+  font-size: 8px;
+  padding: 2px;
+  position: relative;
+  top: -0.5em;
 }
 
 
@@ -218,9 +228,6 @@ a {
 .noteListViewAreaContentIconLink a i {
   padding: 0 10px;
 }
-
-
-
 
 
 /* footerレイアウト */
